# ARMSX2

./: .gitattributes  .gitmodules  0245EF6D.pnach  24036809.pnach  2498951B.pnach  2B8DB1A5.pnach  47C231CC.pnach  5980E116.pnach  71320CA8.pnach  774DE8E2.pnach  7B23BFF5.pnach  7B79C53C.PNACH  901AAC09.pnach  BF5D9AEC.pnach  C1760287.pnach  C398F477.pnach  D090AC7F.pnach  E246AA30.pnach  PCSX2_suite.sln  README.md  crowdin.yml  meson.build
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cmake/: FindLIBEVDEV.cmake  SearchForStuff.cmake
common/src/Utilities/: meson.build
common/src/x86emitter/: meson.build
locales/: meson.build
pcsx2/: CMakeLists.txt  Config.h  DirectoryHelper.h  GameDatabase.cpp  GameDatabase.h  Interpreter.cpp  IopDma.cpp  IopDma.h  IopHw.cpp  IopHw.h  IopSio2.cpp  IopSio2.h  MemcardTypes.h  Pcsx2Config.cpp  R3000A.cpp  Sio0.cpp  Sio0.h  Sio0Types.h  Sio2.cpp  Sio2.h  Sio2Types.h  SioCommon.cpp  SioCommon.h  SioTypes.h  SourceLog.cpp  meson.build  pcsx2.vcxproj  pcsx2.vcxproj.filters
pcsx2-qt/Debugger/: BreakpointDialog.cpp
pcsx2-qt/Settings/: GraphicsSettingsWidget.cpp  GraphicsSettingsWidget.ui
pcsx2/DEV9/ATA/: HddCreate.h
pcsx2/DEV9/ATA/Commands/: ATA_CmdDMA.cpp
pcsx2/DebugTools/: Debug.h
pcsx2/GS/: GS.cpp  GS.h  GSState.cpp  GSState.h
pcsx2/GS/Renderers/Common/: GSDevice.h  GSOsdManager.cpp  GSOsdManager.h  GSRenderer.cpp
pcsx2/GS/Renderers/DX11/: GSTextureFX11.cpp
pcsx2/GS/Renderers/HW/: GSRendererHW.cpp
pcsx2/IPU/: yuv2rgb.h
pcsx2/Memcard/: Memcard.cpp  Memcard.h  MemcardConfig.cpp  MemcardConfig.h  MemcardConfigSlot.cpp  MemcardConfigSlot.h  MemcardFileIO.cpp  MemcardFileIO.h  MemcardFolderIO.cpp  MemcardFolderIO.h  MemcardFolderIOTypes.h  MemcardTypes.h
pcsx2/Memcard/PS1/: MemcardPS1.cpp  MemcardPS1.h  MemcardPS1Protocol.cpp  MemcardPS1Protocol.h  MemcardPS1Types.h
pcsx2/Memcard/PS2/: MemcardPS2.cpp  MemcardPS2.h  MemcardPS2Protocol.cpp  MemcardPS2Protocol.h  MemcardPS2Types.h
pcsx2/Multitap/: MultitapConfig.cpp  MultitapConfig.h
pcsx2/Multitap/PS2/: MultitapPS2Protocol.cpp  MultitapPS2Protocol.h  MultitapPS2Types.h
pcsx2/PAD/: Gamepad.h  PadTypes.h  PadUtils.h
pcsx2/PAD/Devices/: Devices.h  PadEvDev.cpp  PadEvDev.h  PadKeyboard.cpp  PadKeyboard.h  PadXInput.cpp  PadXInput.h
pcsx2/PAD/PS1/: PadPS1.cpp  PadPS1.h  PadPS1Protocol.cpp  PadPS1Protocol.h  PadPS1Types.h
pcsx2/PAD/PS2/: PadPS2.cpp  PadPS2.h  PadPS2Protocol.cpp  PadPS2Protocol.h  PadPS2Types.h
pcsx2/USB/: USB.cpp  device_init.cpp  deviceproxy.h
pcsx2/USB/linux/: config-gtk.cpp
pcsx2/USB/qemu-usb/: hid.cpp  hid.h
pcsx2/USB/shared/: ringbuffer.cpp  shared_usb.cpp
pcsx2/USB/usb-eyetoy/: usb-eyetoy-webcam.h
pcsx2/USB/usb-hid/: hidproxy.h  noop.h  usb-hid.cpp  usb-hid.h
pcsx2/USB/usb-hid/evdev/: evdev-gtk.cpp  evdev.cpp  evdev.h
pcsx2/USB/usb-hid/raw/: rawinput.cpp  rawinput.h
pcsx2/USB/usb-mic/: audiodev-pulse.cpp  usb-headset.cpp  usb-headset.h  usb-mic-singstar.cpp  usb-mic-singstar.h
pcsx2/USB/usb-msd/: usb-msd.h
pcsx2/USB/usb-pad/: padconfig.cpp  padconfig.h  usb-guncon2-wx.cpp  usb-guncon2-wx.h  usb-guncon2.cpp  usb-pad.cpp  usb-pad.h  usb-seamic.cpp
pcsx2/gui/: AppCoreThread.cpp  ConsoleLogger.cpp  ConsoleLogger.h
pcsx2/gui/Panels/: LogOptionsPanels.cpp
pcsx2/ps2/Iop/: IopHwRead.cpp  IopHwWrite.cpp  IopHw_Internal.h
pcsx2/x86/ix86-32/: iR5900-32.cpp
